--- a/arms/build.gradle
+++ b/arms/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -44,6 +44,7 @@ dependencies {
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxlifecycle"]
     compile rootProject.ext.dependencies["rxlifecycle-components"]
+    provided rootProject.ext.dependencies["rxbinding-recyclerview-v7"]
     compile rootProject.ext.dependencies["retrofit"]
     compile rootProject.ext.dependencies["retrofit-converter-gson"]
     compile rootProject.ext.dependencies["retrofit-adapter-rxjava"]
@@ -51,5 +52,6 @@ dependencies {
     compile rootProject.ext.dependencies["annotations"]
     compile rootProject.ext.dependencies["dagger2"]
     compile rootProject.ext.dependencies["okhttp3"]
+    compile rootProject.ext.dependencies["timber"]
     apt 'com.google.dagger:dagger-compiler:2.0.2'
 }
