--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,8 @@ buildscript {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    apt 'com.google.dagger:dagger-compiler:2.0.2'
     testCompile rootProject.ext.dependencies["junit"]
-    compile rootProject.ext.dependencies["cardview-v7"]
+    apt rootProject.ext.dependencies["dagger2-apt-compiler"]
     provided rootProject.ext.dependencies["javax.annotation"]
     compile project(':arms')
 
