--- a/arms/build.gradle
+++ b/arms/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
+    buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.android["minSdkVersion"]
+        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
+        versionCode rootProject.ext.android["versionCode"]
+        versionName rootProject.ext.android["versionName"]
     }
     buildTypes {
         release {
@@ -32,10 +33,11 @@ buildscript {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    testCompile rootProject.ext.dependencies["junit"]
     compile rootProject.ext.dependencies["support-v4"]
     compile rootProject.ext.dependencies["gson"]
     compile rootProject.ext.dependencies["appcompat-v7"]
+    compile rootProject.ext.dependencies["cardview-v7"]
     compile rootProject.ext.dependencies["autolayout"]
     compile rootProject.ext.dependencies["butterknife"]
     compile rootProject.ext.dependencies["androideventbus"]
@@ -45,6 +47,8 @@ dependencies {
     compile rootProject.ext.dependencies["rxlifecycle"]
     compile rootProject.ext.dependencies["rxlifecycle-components"]
     provided rootProject.ext.dependencies["rxbinding-recyclerview-v7"]
+    compile rootProject.ext.dependencies["rxcache"]
+    compile rootProject.ext.dependencies["rxcache-jolyglot-gson"]
     compile rootProject.ext.dependencies["retrofit"]
     compile rootProject.ext.dependencies["retrofit-converter-gson"]
     compile rootProject.ext.dependencies["retrofit-adapter-rxjava"]
@@ -54,5 +58,9 @@ dependencies {
     compile rootProject.ext.dependencies["okhttp3"]
     compile rootProject.ext.dependencies["timber"]
     compile rootProject.ext.dependencies["glide"]
-    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    debugCompile rootProject.ext.dependencies["canary-debug"]
+    releaseCompile rootProject.ext.dependencies["canary-release"]
+    testCompile rootProject.ext.dependencies["canary-release"]
+    apt rootProject.ext.dependencies["dagger2-apt-compiler"]
+    compile project(':rxerrorhandler')
 }
