--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        //lambda
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
 
