--- a/config.gradle
+++ b/config.gradle
@@ -1,68 +1,85 @@
 ext {
 
-    android = [compileSdkVersion       : 23,
-               buildToolsVersion       : "23.0.3",
-               applicationId           : "me.jessyan.wideeyes",
+    android = [
+               compileSdkVersion       : 25,
+               buildToolsVersion       : "25.0.2",
                minSdkVersion           : 15,
-               targetSdkVersion        : 23,
-               versionCode             : 21,
-               versionName             : "1.2.1",
-               androidSupportSdkVersion: "23.3.0",
-               retrofitSdkVersion      : "2.1.0",
-               dagger2SdkVersion       : "2.6",
-               rxlifecycleSdkVersion   : "0.6.1",
-               espressoSdkVersion      : "2.2.2"
+               targetSdkVersion        : 25,
+               versionCode             : 1,
+               versionName             : "1.0"
     ]
+
+    version = [
+               androidSupportSdkVersion: "25.3.1",
+               retrofitSdkVersion      : "2.2.0",
+               dagger2SdkVersion       : "2.10",
+               butterknifeSdkVersion   : "8.5.1",
+               rxlifecycleSdkVersion   : "1.0",
+               espressoSdkVersion      : "2.2.2",
+               canarySdkVersion        : "1.5"
+    ]
+
     dependencies = [
-            "multidex"                 : "compile 'com.android.support:multidex:1.0.1'",
-            "androidJUnitRunner"       : "android.support.test.runner.AndroidJUnitRunner",
-            "javax.annotation"         : 'javax.annotation:jsr250-api:1.0',
-            "appcompat-v7"             : "com.android.support:appcompat-v7:${android["androidSupportSdkVersion"]}",
-            "design"                   : "com.android.support:design:${android["androidSupportSdkVersion"]}",
-            "support-v4"               : "com.android.support:support-v4:${android["androidSupportSdkVersion"]}",
-            "cardview-v7"              : "com.android.support:cardview-v7:${android["androidSupportSdkVersion"]}",
-            "annotations"              : "com.android.support:support-annotations:${android["androidSupportSdkVersion"]}",
-            "recyclerview-v7"          : "com.android.support:recyclerview-v7:${android["androidSupportSdkVersion"]}",
-            "retrofit"                 : "com.squareup.retrofit2:retrofit:${android["retrofitSdkVersion"]}",
-            "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${android["retrofitSdkVersion"]}",
-            "retrofit-adapter-rxjava"  : "com.squareup.retrofit2:adapter-rxjava:${android["retrofitSdkVersion"]}",
-            "junit"                    : "junit:junit:4.12",
-            "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.4.2",
-            "gson"                     : "com.google.code.gson:gson:2.6.2",
-            "autolayout"               : "com.zhy:autolayout:1.4.1",
-            "butterknife"              : "com.jakewharton:butterknife:8.4.0",
-            "butterknife-apt"          : "com.jakewharton:butterknife-compiler:8.4.0",
+            //support
+            "appcompat-v7"             : "com.android.support:appcompat-v7:${version["androidSupportSdkVersion"]}",
+            "design"                   : "com.android.support:design:${version["androidSupportSdkVersion"]}",
+            "support-v4"               : "com.android.support:support-v4:${version["androidSupportSdkVersion"]}",
+            "cardview-v7"              : "com.android.support:cardview-v7:${version["androidSupportSdkVersion"]}",
+            "annotations"              : "com.android.support:support-annotations:${version["androidSupportSdkVersion"]}",
+            "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
+
+            //network
+            "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
+            "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava"  : "com.squareup.retrofit2:adapter-rxjava:${version["retrofitSdkVersion"]}",
+            "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.6.0",
+            "okhttp-urlconnection"     : "com.squareup.okhttp:okhttp-urlconnection:2.0.0",
             "glide"                    : "com.github.bumptech.glide:glide:3.7.0",
-            "androideventbus"          : "org.simple:androideventbus:1.0.5.1",
-            "rxandroid"                : "io.reactivex:rxandroid:1.1.0",
-            "rxjava"                   : "io.reactivex:rxjava:1.1.0",
-            "rxlifecycle"              : "com.trello:rxlifecycle:${android["rxlifecycleSdkVersion"]}",
-            "rxlifecycle-components"   : "com.trello:rxlifecycle-components:${android["rxlifecycleSdkVersion"]}",
-            "rxcache"                  : "com.github.VictorAlbertos.RxCache:runtime:1.6.9",
-            "rxcache-jolyglot-gson"    : "com.github.VictorAlbertos.Jolyglot:gson:0.0.3",
-            "dagger2"                  : "com.google.dagger:dagger:${android["dagger2SdkVersion"]}",
-            "dagger2-apt-compiler"     : "com.google.dagger:dagger-compiler:${android["dagger2SdkVersion"]}",
-            "rxbinding-recyclerview-v7": "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0",
-            "rxpermissions"            : "com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar",
-            "pickerview"               : "com.bigkoo:pickerview:2.0.8",
-            "nineoldandroids"          : "com.nineoldandroids:library:2.4.0",
+            "glide-loader-okhttp3"     : "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar",
             "picasso"                  : "com.squareup.picasso:picasso:2.5.2",
+
+            //view
+            "autolayout"               : "com.zhy:autolayout:1.4.5",
+            "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
+            "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
+            "pickerview"               : "com.bigkoo:pickerview:2.0.8",
             "photoview"                : "com.github.chrisbanes.photoview:library:1.2.3",
             "numberprogressbar"        : "com.daimajia.numberprogressbar:library:1.2@aar",
-            "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1",
-            "okhttp-urlconnection"     : "com.squareup.okhttp:okhttp-urlconnection:2.0.0",
-            "otto"                     : "com.squareup:otto:1.3.8",
             "nineoldandroids"          : "com.nineoldandroids:library:2.4.0",
             "paginate"                 : "com.github.markomilos:paginate:0.5.1",
+
+            //rx
+            "rxandroid"                : "io.reactivex:rxandroid:1.2.1",
+            "rxjava"                   : "io.reactivex:rxjava:1.2.9",
+            "rxlifecycle"              : "com.trello:rxlifecycle:${version["rxlifecycleSdkVersion"]}",
+            "rxlifecycle-components"   : "com.trello:rxlifecycle-components:${version["rxlifecycleSdkVersion"]}",
+            "rxcache"                  : "com.github.VictorAlbertos.RxCache:runtime:1.7.0-1.x",
+            "rxcache-jolyglot-gson"    : "com.github.VictorAlbertos.Jolyglot:gson:0.0.3",
+            "rxbinding-recyclerview-v7": "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.1",
+            "rxpermissions"            : "com.tbruyelle.rxpermissions:rxpermissions:0.9.3@aar",
+            "rxerrorhandler"           : "me.jessyan:rxerrorhandler:1.0.1",
+
+            //tools
+            "dagger2"                  : "com.google.dagger:dagger:${version["dagger2SdkVersion"]}",
+            "dagger2-compiler"         : "com.google.dagger:dagger-compiler:${version["dagger2SdkVersion"]}",
+            "androideventbus"          : "org.simple:androideventbus:1.0.5.1",
+            "otto"                     : "com.squareup:otto:1.3.8",
+            "gson"                     : "com.google.code.gson:gson:2.8.0",
+            "multidex"                 : "compile 'com.android.support:multidex:1.0.1'",
+            "javax.annotation"         : 'javax.annotation:jsr250-api:1.0',
+
             //test
+            "junit"                    : "junit:junit:4.12",
+            "androidJUnitRunner"       : "android.support.test.runner.AndroidJUnitRunner",
             "runner"                   : 'com.android.support.test:runner:0.5',
-            "espresso-core"            : "com.android.support.test.espresso:espresso-core:${android["espressoSdkVersion"]}",
-            "espresso-contrib"         : ("com.android.support.test.espresso:espresso-contrib:${android["espressoSdkVersion"]}"),
-            "espresso-intents"         : "com.android.support.test.espresso:espresso-intents:${android["espressoSdkVersion"]}",
+            "espresso-core"            : "com.android.support.test.espresso:espresso-core:${version["espressoSdkVersion"]}",
+            "espresso-contrib"         : "com.android.support.test.espresso:espresso-contrib:${version["espressoSdkVersion"]}",
+            "espresso-intents"         : "com.android.support.test.espresso:espresso-intents:${version["espressoSdkVersion"]}",
             "mockito-core"             : "org.mockito:mockito-core:1.+",
-            "timber"                   : "com.jakewharton.timber:timber:4.1.2",
-            "canary-debug"             : "com.squareup.leakcanary:leakcanary-android:1.4-beta2",
-            "canary-release"           : "com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2"
+            "timber"                   : "com.jakewharton.timber:timber:4.5.1",
+            "canary-debug"             : "com.squareup.leakcanary:leakcanary-android:${version["canarySdkVersion"]}",
+            "canary-release"           : "com.squareup.leakcanary:leakcanary-android-no-op:${version["canarySdkVersion"]}",
+            "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1"
     ]
 
 
