--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,34 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
     compile rootProject.ext.dependencies["paginate"]
     //arms
-    compile 'me.jessyan:arms:1.6.0'
+    compile 'me.jessyan:arms:2.0.1'
     //test
     testCompile rootProject.ext.dependencies["junit"]
     debugCompile rootProject.ext.dependencies["canary-debug"]
     releaseCompile rootProject.ext.dependencies["canary-release"]
     testCompile rootProject.ext.dependencies["canary-release"]
+
+
+    // Litho
+    compile 'com.facebook.litho:litho-core:0.2.0'
+    compile 'com.facebook.litho:litho-widget:0.2.0'
+    provided 'com.facebook.litho:litho-annotations:0.2.0'
+
+    annotationProcessor 'com.facebook.litho:litho-processor:0.2.0'
+
+    // SoLoader
+    compile 'com.facebook.soloader:soloader:0.2.0'
+
+    // Optional
+    // For debugging
+    debugCompile 'com.facebook.litho:litho-stetho:0.2.0'
+
+    // For integration with Fresco
+    compile 'com.facebook.litho:litho-fresco:0.2.0'
+
+
+    compile ('com.alibaba.android:vlayout:1.0.5@aar') {
+        transitive = true
+    }
+
 }
